ignore- data archives readme- update for enhanced features archive/cleanup- cleanup or archive a run's gathered data to re-run get_fastest/get_minimal/get_ping- add parameters to choose a country, and choose which iso

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 *.html
 *.csv
 *.lst
-*_curl_pings
-*_robots
-*_pings
+*_curl_pings/
+*_robots/
+*_pings/
 #vim workfiles
 *.sw?
+#archive directories
+*.bak/
